--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -6,7 +6,7 @@ layout: page
   .box{padding:25px; margin-bottom:25px;}
 </style>
 
-<div class='full title' style='background-image:url({{site.data.images.directory | relative_url}}/headers/research.jpg); min-height:250px'>
+<div class='full title' style='background-image:url({{site.data.images.directory | relative_url}}/headers/our-research.jpg); min-height:250px'>
   <div class='row'>
     <div class='large-12 columns'>
       <h2 style='letter-spacing: 2px;font-size: 4.28571rem; color: rgb(255, 255, 255); text-transform:capitalize'>News</h2>
