--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: blog
 <div class='mod modBlogPost big no_bg'>
   <div class='images'>
     {% for image in page.images %}
-      <div class='image'><img alt="" src="{{site.baseurl}}/{{image}}" /></div>
+      <div class='image'><img alt="" src="{{site.data.images.directory | prepend: relative_url}}/{{image}}" /></div>
     {% endfor %}
   </div>
   <div class='content'>
