Sort news items by date.

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class='full title' style='background-image:url({{site.url}}/{{site.baseurl}}{{site.data.images.directory}}/headers/blog.jpg); min-height:250px'>
+<div class='full title' style='background-image:url({{site.data.images.directory | absolute_url }}/headers/blog.jpg); min-height:250px'>
   <div class='row'>
     <div class='large-12 columns'>
       <h2 style='letter-spacing: 2px;font-size: 4.28571rem; color: rgb(255, 255, 255); text-transform:capitalize'>Blog</h2>
